--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "techifybackendapi",
   "version": "1.0.0",
+  "description": "This is the backend application for our web app- Techify",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -8,7 +9,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
